# rs_ray_tracer

./: .gitignore  Cargo.toml  README.md  out.ppm
.github/workflows/: tests.yml
data/yaml_samples/: book_cover.yaml
mathlib/: Cargo.toml
mathlib/src/: cmp.rs  lib.rs
mathlib/src/io/: mod.rs  png.rs  ppm.rs
mathlib/src/mathstructs/: matrix.rs  matrix_ext.rs  point.rs  vector.rs
mathlib/src/object/: cube.rs  cylinder.rs  mod.rs  plane.rs  sphere.rs
mathlib/src/objects/: material.rs  object.rs  sphere.rs
mathlib/src/ray/: computations.rs  intersects copy.rs  intersects.rs  mod.rs  sphere.rs
mathlib/src/structs/: matrix.rs  matrix_ext.rs  mod.rs  point.rs  tuple.rs  vector.rs
mathlib/src/visual/: camera.rs  canvas.rs  color.rs  light.rs  material.rs  patterns.rs  world.rs
mathlib_renderer/: Cargo.toml
mathlib_renderer/src/: lib.rs
mathlib_renderer/src/io/: ppm.rs
mathlib_renderer/src/object/: plane.rs
mathlib_renderer/src/ray/: computations.rs  intersects.rs
mathlib_renderer/src/visual/: canvas.rs  light.rs  world.rs
parselib_yaml/: Cargo.toml
parselib_yaml/src/: yaml.rs
runtime_unix/: Cargo.toml
runtime_unix/src/: main.rs  parallel.rs  png_io.rs
runtime_unix/src/examples/: appendix1.rs  chapter10.rs  chapter11.rs  chapter6.rs  chapter7.rs  chapter8.rs
runtime_unix/src/yaml_parsing/: yaml.rs
samples/yaml_samples/: book_cover.yaml
wasm_web/: Cargo.toml
wasm_web/src/: lib.rs
wasm_webpack/: Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
wasm_webpack/js/: index.js  render.worker.js
wasm_webpack/src/: example8.rs  lib.rs
wasm_webpack/static/: book_cover.yaml  checkers.yaml  cover.yaml  index.html  sphere.yaml  styles.css
