[package]
name = "wasm_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.45"
mathlib = { path = "../mathlib"}
photon-rs = "0.3.2"
wasm-bindgen = "0.2.78"
# js-sys = "0.3.60"
# wasm-bindgen = "0.2.83"
# photon-rs = "0.3.1"

# reformating: web-sys = {version="0.3.61", features = ["Window", "Document", "Element", "HtmlElement", "console"]}
[dependencies.web-sys]
version="0.3.4" 
features = [
    "Window", "Document", "Element", "HtmlElement", 
    "HtmlDivElement", "console", "Blob", "CanvasRenderingContext2d", 
    "HtmlCanvasElement", "HtmlImageElement", "ImageData",
    'Node',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader'
    ]
